compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__aliased_discard_pattern_in_bit_array_later_used_in_guard_2.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\npub fn main(x) {\n  case x {\n    <<_ as b>> | <<1 as b>> | <<b>> if b == 1 -> b + 2\n    _ -> 0\n  }\n}"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    <<_ as b>> | <<1 as b>> | <<b>> if b == 1 -> b + 2
    _ -> 0
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/1]).

-spec main(bitstring()) -> integer().
main(X) ->
    case X of
        <<B>> when B =:= 1 ->
            B + 2;

        <<1>> when 1 =:= 1 ->
            B = 1,
            B + 2;

        <<B>> when B =:= 1 ->
            B + 2;

        _ ->
            0
    end.
