compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__clause_guards-10.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\npub fn main() {\n  let x = 0.123\n  case x {\n    99.9854 -> 1\n    _ -> 0\n  }\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).

-spec main() -> integer().
main() ->
    X = 0.123,
    case X of
        99.9854 ->
            1;

        _@1 ->
            0
    end.

