compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__clause_guards-15.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\npub fn main() {\n  let x = #(1, 2, 3)\n  case x {\n    _ if x == #(1, 2, 3) -> 1\n    _ -> 0\n  }\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).

-spec main() -> integer().
main() ->
    X = {1, 2, 3},
    case X of
        _@1 when X =:= {1, 2, 3} ->
            1;

        _@2 ->
            0
    end.

