compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__clause_guards-17.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\npub fn main() {\n  let x = 0\n  case x {\n    _ if x == 0 -> 1\n  }\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).

-spec main() -> integer().
main() ->
    X = 0,
    case X of
        _@1 when X =:= 0 ->
            1
    end.

